# top-dt-cpp

./: .gitignore  CMakeLists.txt  README.md  input.toy
grammar/: .gitignore  CMakeLists.txt  Lexer.g4  Parser.g4  ToyLexer.g4  ToyParser.g4
include/: declaration.h  exception.h  normalize.h  parser.h  pretty.h  syntax.h  term.h  type_check.h  value.h
include/toy-dt/: term.h
include/toy-dt/common/: visitor.h
include/toy-dt/pretty/: common.h  term_pretty.h
src/: CMakeLists.txt
src/Common/: Types.h  Visitor.cpp  Visitor.h
src/Declaration/: Checked.h  Commo.cpp  Common.h  DeclarationResolver.cpp  DeclarationResolver.h  Unchecked.h
src/Eval/: EvalVisitor.cpp  EvalVisitor.h
src/Exception/: Common.cpp  Common.h  Declaration.h  TypeCheck.cpp  TypeCheck.h  TypeCheckTracer.cpp  TypeCheckTracer.h
src/Normalize/: CompareVisitor.cpp  CompareVisitor.h  EvalVisitor.cpp  EvalVisitor.h  Evaluation.h  ReadBackVisitor.cpp  ReadBackVisitor.h
src/Parser/: .gitignore  CMakeLists.txt  Lexer.l  Parser.output  Parser.y  ToyLexer.h  ToyParser.cpp  ToyParser.h  location.hh
src/Pretty/: Block.cpp  Block.h  Common.h  Document.cpp  Document.h  Element.cpp  Element.h  Formatter.cpp  Formatter.h  SyntaxPrettyPrinter.cpp  SyntaxPrettyPrinter.h  Term.cpp  Term.h  TermPrettyPrinter.cpp  TermPrettyPrinter.h  Tokens.h
src/Syntax/: Helper.h  Nodes.cpp  Nodes.h  PiNode.h  RefNode.h  SyntaxNode.h  SyntaxVisitor.h  UnivNode.h
src/Term/: Helper.h  Nodes.cpp  Nodes.h  PiNode.cpp  PiNode.h  RefNode.cpp  RefNode.h  TermNode.cpp  TermNode.h  TermVisitor.cpp  TermVisitor.h  UnivNode.cpp  UnivNode.h
src/TypeCheck/: ExprCheckVisitor.cpp  ExprCheckVisitor.h  ExprInferVisitor.cpp  ExprInferVisitor.h  LevelCheckVisitor.cpp  LevelCheckVisitor.h  TypeChecker.cpp  TypeChecker.h
src/Value/: Closure.h  Context.cpp  Context.h  Env.cpp  Env.h  Helper.cpp  Helper.h  NeutralNode.h  Nodes.cpp  Nodes.h  PiNode.h  RefNode.h  UnivNode.h  ValueNode.h  ValueVisitor.h
src/pretty/: CMakeLists.txt  term.cpp
src/term/: CMakeLists.txt  term.cpp
